------------------------------------------------------------------------
r2056 | gaser | 2022-07-29 18:26:41

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_conf_factorial.m
 M cat_conf_stools.m
 M cat_conf_tools.m
MM cat_stat_check_cov.m
D  cat_stat_check_cov2.m
AM cat_stat_check_cov_old.m
D  internal/cat_stat_check_SPM.m
R  cat_stat_factorial_design.m -> internal/cat_stat_factorial_design.m


Changed: Renamed original cat_stat_check_cov2.m to cat_stat_check_cov.m.
Changed: Updated all functions that call cat_stat_check_cov and removed this
         option for surfaces because this is now located in tools for both 
         volumes and surfaces.
         ------------------------------------------------------------------------
r2055 | gaser | 2022-07-29 18:07:41

Changed paths:
 M CHANGES.txt
 M cat_conf_factorial.m
MM cat_stat_check_SPM.m
 M cat_stat_check_cov2.m
 M cat_stat_showslice_all.m
R  cat_stat_check_SPM2.m -> internal/cat_stat_check_SPM.m


Changed: Set group-specific AnCova as default for TIV correction in 
         cat_conf_factorial.m.
Changed: Removed sone old options in cat_stat_showslice_all.m that are not 
         needed anymore.
Changed: Many smaller changes to cat_stat_check_cov2.m to remove inconsitencies.         
Changed: Prepared cat_stat_check_SPM.m for new z-score check.------------------------------------------------------------------------
r2054 | gaser | 2022-07-28 17:43:44

Changed paths:
 M CHANGES.txt
 M cat_conf_factorial.m
A  cat_stat_check_SPM2.m
 M cat_stat_check_cov2.m


Changed: Prepared  factorial design to also allow check for sample homogeneity.
Changed: Added multiple regression and 2-sample t-test again to factorial 
         design.
Added:   New tool for checking favtoial designs.------------------------------------------------------------------------
r2052 | gaser | 2022-07-28 01:40:04

Changed paths:
 M CHANGES.txt
A  html/icons/file_spm_view_p0.png


Changed: Added new icons for cat_stat_check_cov2.m